--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.20.11",
+    "objection": "^2.1.3",
+    "pg": "^7.18.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
