--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.10.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "graphql": "^14.6.0",
+    "graphql-yoga": "^1.18.3",
     "knex": "^0.20.11",
     "objection": "^2.1.3",
-    "pg": "^7.18.2"
+    "objection-unique": "^1.2.0",
+    "pg": "^7.18.2",
+    "uuidv4": "^6.0.6"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
